# Banking-Fraud-Analytics

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: dbt_ci.yml
banking_fraud_analytics/: .gitignore  dbt_project.yml
banking_fraud_analytics/airflow/: docker-compose.yaml
banking_fraud_analytics/airflow/config/: airflow.cfg
banking_fraud_analytics/airflow/dags/: banking_fraud_dag.py
banking_fraud_analytics/models/bronze/: bronze_cards.sql  bronze_transactions.sql  bronze_users.sql  schema.yml
banking_fraud_analytics/models/gold/: gold_customer_summary.sql  gold_fraud_analysis.sql  gold_monthly_trends.sql  schema.yml
banking_fraud_analytics/models/silver/: schema.yml  silver_cards.sql  silver_transactions.sql  silver_users.sql
banking_fraud_analytics/models/source/: source.yml
banking_fraud_analytics/scripts/: convert_json_to_csv.py
banking_fraud_analytics/seeds/: mcc_codes.csv  train_fraud_labels.csv
banking_fraud_analytics/streamlit/: app.py  db_connection.py  requirements.txt
banking_fraud_analytics/streamlit/.streamlit/: config.toml
banking_fraud_analytics/streamlit/components/: sidebar.py
banking_fraud_analytics/streamlit/pages/: 1_monthly_trends.py  2_fraud_analysis.py  3_customer_summary.py
